--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@em2046/nova-next",
+  "name": "@jiangshengdev/nova-next",
   "description": "Experimental Vue components",
   "version": "2.0.0-alpha.27",
   "author": {
-    "name": "em2046",
-    "email": "em2046@qq.com"
+    "name": "jiangshengdev",
+    "email": "jiangshengdev@outlook.com"
   },
   "license": "MIT",
   "files": [
@@ -32,13 +32,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/em2046/nova-next"
+    "url": "https://github.com/jiangshengdev/nova-next"
   },
   "bugs": {
-    "url": "https://github.com/em2046/nova-next/issues"
+    "url": "https://github.com/jiangshengdev/nova-next/issues"
   },
   "dependencies": {
-    "@em2046/material-design-icons-vue-next": "^1.0.0-alpha.6",
+    "@jiangshengdev/material-design-icons-vue-next": "^1.0.0-alpha.6",
     "vue": "^3.0.7"
   },
   "devDependencies": {
