--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,27 @@
 {
   "compilerOptions": {
-    "declaration": true,
-    "declarationMap": false,
-    "esModuleInterop": true,
-    "declarationDir": "./temp",
+    "target": "ES2020",
+    "module": "ESNext",
+    "moduleResolution": "Bundler",
+    "lib": ["DOM", "DOM.Iterable", "ES2020"],
     "jsx": "preserve",
     "jsxImportSource": "vue",
-    "module": "CommonJS",
-    "moduleResolution": "Node",
+    "types": ["vite/client", "jest"],
+    "useDefineForClassFields": true,
+    "declaration": true,
+    "declarationMap": false,
+    "declarationDir": "./temp",
+    "esModuleInterop": true,
+    "resolveJsonModule": true,
     "skipLibCheck": true,
     "sourceMap": true,
-    "strict": true,
-    "target": "ES6"
+    "strict": true
   },
-  "exclude": ["node_modules", "temp"]
+  "exclude": ["node_modules", "temp"],
+  "ts-node": {
+    "compilerOptions": {
+      "module": "CommonJS",
+      "moduleResolution": "Node"
+    }
+  }
 }
