--- a/package.json
+++ b/package.json
@@ -2,11 +2,15 @@
   "name": "@jiangshengdev/nova-next",
   "description": "Experimental Vue components",
   "version": "2.0.0-alpha.29",
+  "packageManager": "pnpm@10.22.0",
   "author": {
     "name": "jiangshengdev",
     "email": "jiangshengdev@outlook.com"
   },
   "license": "MIT",
+  "engines": {
+    "node": "^20.19.0 || >=22.12.0"
+  },
   "files": [
     "dist",
     "src"
@@ -18,17 +22,23 @@
     "doc:dev": "vitepress dev docs",
     "doc:dist": "vitepress build docs",
     "dev": "vite",
+    "preview": "vite preview",
+    "build": "run-s type-check build:lib build:demo",
+    "build:demo": "vite build",
+    "build:lib": "run-s gulp:clean gulp:style gulp:lib",
+    "type-check": "vue-tsc --build",
+    "test": "pnpm test:unit",
+    "test:unit": "jest",
+    "test:e2e": "playwright test",
+    "lint:oxlint": "oxlint . --fix -D correctness --ignore-path .gitignore",
+    "lint:eslint": "eslint . --fix --cache --ext .js,.jsx,.ts,.tsx,.vue",
+    "lint": "run-s lint:*",
+    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,vue}\"",
     "gulp:clean": "gulp --require ts-node/register/transpile-only clean",
     "gulp:style": "gulp --require ts-node/register/transpile-only style",
     "gulp:lib": "gulp --require ts-node/register/transpile-only lib",
     "gulp:doc": "gulp --require ts-node/register/transpile-only doc",
-    "build": "yarn gulp:clean && yarn gulp:style && yarn gulp:lib",
-    "build:demo": "vite build",
-    "test": "jest",
-    "prettier": "prettier --write src",
-    "lint": "eslint . --fix --ext .js,.jsx,.ts,.tsx,.vue",
-    "format": "yarn prettier && yarn lint",
-    "prepublishOnly": "yarn format && yarn build"
+    "prepublishOnly": "pnpm lint && pnpm build"
   },
   "repository": {
     "type": "git",
@@ -39,14 +49,17 @@
   },
   "dependencies": {
     "@jiangshengdev/material-design-icons-vue-next": "^1.0.0-alpha.9",
-    "vue": "^3.5.4"
+    "vue": "^3.5.22"
   },
   "devDependencies": {
+    "@playwright/test": "^1.56.1",
+    "@prettier/plugin-oxc": "^0.0.4",
     "@babel/core": "^7.28.5",
     "@babel/preset-env": "^7.28.5",
     "@babel/preset-typescript": "^7.28.5",
     "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.39.1",
+    "@tsconfig/node22": "^22.0.2",
     "@microsoft/api-extractor": "^7.43.0",
     "@rollup/plugin-typescript": "^12.0.0",
     "@types/babel__core": "^7.20.0",
@@ -65,13 +78,18 @@
     "@vitejs/plugin-vue": "^6.0.2",
     "@vitejs/plugin-vue-jsx": "^5.1.2",
     "@vue/babel-plugin-jsx": "^1.5.0",
+    "@vue/eslint-config-prettier": "^10.2.0",
+    "@vue/eslint-config-typescript": "^14.6.0",
     "@vue/compiler-sfc": "^3.5.4",
     "@vue/test-utils": "^2.4.6",
+    "@vitest/eslint-plugin": "^1.3.23",
     "autoprefixer": "^10.4.0",
     "babel-jest": "^30.2.0",
     "del": "^8.0.0",
     "esbuild": "^0.27.0",
-    "eslint": "^8.57.0",
+    "eslint": "^9.39.1",
+    "eslint-plugin-oxlint": "~1.23.0",
+    "eslint-plugin-playwright": "^2.2.2",
     "eslint-config-prettier": "^10.0.0",
     "eslint-plugin-vue": "^10.0.0",
     "globby": "^14.0.0",
@@ -80,7 +98,10 @@
     "gulp-rename": "^2.0.0",
     "jest": "^29.0.0",
     "jest-environment-jsdom": "^29.0.0",
+    "jiti": "^2.6.1",
     "lodash": "^4.17.21",
+    "npm-run-all2": "^8.0.4",
+    "oxlint": "~1.23.0",
     "postcss": "^8.4.0",
     "postcss-import": "^16.0.0",
     "postcss-nested": "^7.0.0",
@@ -93,9 +114,10 @@
     "tsx": "^4.0.0",
     "typescript": "^5.7.2",
     "vite": "^6.0.0",
+    "vite-plugin-vue-devtools": "^8.0.3",
     "vitepress": "^1.6.0",
     "vue-eslint-parser": "^10.0.0",
-    "vue-router": "^4.5.1",
+    "vue-router": "^4.6.3",
     "vue-tsc": "^2.1.0"
   }
 }
