--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "@vue/babel-plugin-jsx": "^1.5.0",
     "@vue/eslint-config-prettier": "^10.2.0",
     "@vue/eslint-config-typescript": "^14.6.0",
+    "@vue/tsconfig": "^0.8.1",
     "@vue/compiler-sfc": "^3.5.4",
     "@vue/test-utils": "^2.4.6",
     "@vitest/eslint-plugin": "^1.3.23",
@@ -118,6 +119,6 @@
     "vitepress": "^1.6.0",
     "vue-eslint-parser": "^10.0.0",
     "vue-router": "^4.6.3",
-    "vue-tsc": "^2.1.0"
+    "vue-tsc": "^3.1.1"
   }
 }
