--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,11 @@
 {
-  "compilerOptions": {
-    "target": "ES2020",
-    "module": "ESNext",
-    "moduleResolution": "Bundler",
-    "lib": ["DOM", "DOM.Iterable", "ES2020"],
-    "jsx": "preserve",
-    "jsxImportSource": "vue",
-    "types": ["vite/client", "jest"],
-    "useDefineForClassFields": true,
-    "declaration": true,
-    "declarationMap": false,
-    "declarationDir": "./temp",
-    "esModuleInterop": true,
-    "resolveJsonModule": true,
-    "skipLibCheck": true,
-    "sourceMap": true,
-    "strict": true
-  },
-  "exclude": ["node_modules", "temp"],
+  "files": [],
+  "references": [
+    { "path": "./tsconfig.app.json" },
+    { "path": "./tsconfig.node.json" },
+    { "path": "./tsconfig.vitest.json" },
+    { "path": "./tsconfig.e2e.json" }
+  ],
   "ts-node": {
     "compilerOptions": {
       "module": "CommonJS",
