--- a/package.json
+++ b/package.json
@@ -114,7 +114,7 @@
     "tslib": "^2.0.0",
     "tsx": "^4.0.0",
     "typescript": "^5.7.2",
-    "vite": "^6.0.0",
+    "vite": "npm:rolldown-vite@latest",
     "vite-plugin-vue-devtools": "^8.0.3",
     "vitepress": "^1.6.0",
     "vue-eslint-parser": "^10.0.0",
