--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "build:lib": "run-s gulp:clean gulp:style gulp:lib",
     "type-check": "vue-tsc --build",
     "test": "pnpm test:unit",
-    "test:unit": "jest",
+    "test:unit": "vitest run",
+    "test:unit:watch": "vitest",
+    "test:unit:update": "vitest run --update",
     "test:e2e": "playwright test",
     "lint:oxlint": "oxlint . --fix -D correctness --ignore-path .gitignore",
     "lint:eslint": "eslint . --fix --cache --ext .js,.jsx,.ts,.tsx,.vue",
@@ -55,7 +57,6 @@
     "@playwright/test": "^1.56.1",
     "@prettier/plugin-oxc": "^0.0.4",
     "@babel/core": "^7.28.5",
-    "@babel/preset-env": "^7.28.5",
     "@babel/preset-typescript": "^7.28.5",
     "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.39.1",
@@ -67,7 +68,7 @@
     "@types/gulp": "^4.0.8",
     "@types/gulp-postcss": "^8.0.0",
     "@types/gulp-rename": "^2.0.0",
-    "@types/jest": "^29.0.0",
+    "@types/jsdom": "^27.0.0",
     "@types/lodash": "^4.14.168",
     "@types/node": "^20.0.0",
     "@types/postcss-import": "^14.0.0",
@@ -83,9 +84,9 @@
     "@vue/tsconfig": "^0.8.1",
     "@vue/compiler-sfc": "^3.5.4",
     "@vue/test-utils": "^2.4.6",
+    "@vitest/coverage-v8": "^3.2.4",
     "@vitest/eslint-plugin": "^1.3.23",
     "autoprefixer": "^10.4.0",
-    "babel-jest": "^30.2.0",
     "del": "^8.0.0",
     "esbuild": "^0.27.0",
     "eslint": "^9.39.1",
@@ -97,9 +98,8 @@
     "gulp": "^4.0.2",
     "gulp-postcss": "^9.0.0",
     "gulp-rename": "^2.0.0",
-    "jest": "^29.0.0",
-    "jest-environment-jsdom": "^29.0.0",
     "jiti": "^2.6.1",
+    "jsdom": "^27.0.1",
     "lodash": "^4.17.21",
     "npm-run-all2": "^8.0.4",
     "oxlint": "~1.23.0",
@@ -109,12 +109,12 @@
     "prettier": "^3.0.0",
     "rollup": "^4.0.0",
     "through2": "^4.0.2",
-    "ts-jest": "^29.0.0",
     "ts-node": "^10.0.0",
     "tslib": "^2.0.0",
     "tsx": "^4.0.0",
     "typescript": "^5.7.2",
     "vite": "npm:rolldown-vite@latest",
+    "vitest": "^3.2.4",
     "vite-plugin-vue-devtools": "^8.0.3",
     "vitepress": "^1.6.0",
     "vue-eslint-parser": "^10.0.0",
