--- a/tsconfig.vitest.json
+++ b/tsconfig.vitest.json
@@ -4,13 +4,15 @@
     "composite": true,
     "lib": [],
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.vitest.tsbuildinfo",
-    "types": ["node", "jsdom", "jest"]
+    "types": ["node", "jsdom", "vitest"]
   },
   "include": [
     "src/**/__tests__/*",
     "tests/**/*.ts",
     "tests/**/*.tsx",
     "tests/**/*.mts",
-    "tests/**/*.cts"
-  ]
+    "tests/**/*.cts",
+    "tests/setup.ts"
+  ],
+  "exclude": ["e2e"]
 }
