--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "test:unit:update": "vitest run --update",
     "test:e2e": "playwright test",
     "lint:oxlint": "oxlint . --fix -D correctness --ignore-path .gitignore",
-    "lint:eslint": "eslint . --fix --cache --ext .js,.jsx,.ts,.tsx,.vue",
+    "lint:eslint": "eslint . --fix --cache",
     "lint": "run-s lint:*",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,vue}\"",
     "gulp:clean": "gulp --require ts-node/register/transpile-only clean",
@@ -58,8 +58,6 @@
     "@prettier/plugin-oxc": "^0.0.4",
     "@babel/core": "^7.28.5",
     "@babel/preset-typescript": "^7.28.5",
-    "@eslint/eslintrc": "^3.3.1",
-    "@eslint/js": "^9.39.1",
     "@tsconfig/node22": "^22.0.2",
     "@microsoft/api-extractor": "^7.43.0",
     "@rollup/plugin-typescript": "^12.0.0",
