--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,33 +1,12 @@
 {
   "extends": "@vue/tsconfig/tsconfig.dom.json",
+  "include": ["env.d.ts", "src/**/*", "src/**/*.vue"],
+  "exclude": ["src/**/__tests__/*"],
   "compilerOptions": {
-    "baseUrl": ".",
-    "composite": true,
-    "declaration": true,
-    "declarationMap": false,
-    "declarationDir": "./temp",
-    "esModuleInterop": true,
-    "jsxImportSource": "vue",
-    "moduleResolution": "Bundler",
-    "verbatimModuleSyntax": false,
-    "useDefineForClassFields": true,
+    "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
+
     "paths": {
       "@/*": ["./src/*"]
-    },
-    "skipLibCheck": true,
-    "strict": true,
-    "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
-    "types": ["vite/client"]
-  },
-  "include": [
-    "src/**/*.ts",
-    "src/**/*.tsx",
-    "src/**/*.mts",
-    "src/**/*.cts",
-    "src/**/*.vue",
-    "src/**/*.d.ts",
-    "src/**/*.js",
-    "src/**/*.jsx"
-  ],
-  "exclude": ["src/**/__tests__/*", "node_modules", "temp"]
+    }
+  }
 }
