--- a/tsconfig.vitest.json
+++ b/tsconfig.vitest.json
@@ -1,18 +1,11 @@
 {
   "extends": "./tsconfig.app.json",
+  "include": ["src/**/__tests__/*", "env.d.ts"],
+  "exclude": [],
   "compilerOptions": {
-    "composite": true,
-    "lib": [],
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.vitest.tsbuildinfo",
-    "types": ["node", "jsdom", "vitest"]
-  },
-  "include": [
-    "src/**/__tests__/*",
-    "tests/**/*.ts",
-    "tests/**/*.tsx",
-    "tests/**/*.mts",
-    "tests/**/*.cts",
-    "tests/setup.ts"
-  ],
-  "exclude": ["e2e"]
+
+    "lib": [],
+    "types": ["node", "jsdom"]
+  }
 }
