--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "lint:oxlint": "oxlint . --fix -D correctness --ignore-path .gitignore",
     "lint:eslint": "eslint . --fix --cache",
     "lint": "run-s lint:*",
-    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,vue}\"",
+    "format": "prettier --write src/",
     "gulp:clean": "gulp --require ts-node/register/transpile-only clean",
     "gulp:style": "gulp --require ts-node/register/transpile-only style",
     "gulp:lib": "gulp --require ts-node/register/transpile-only lib",
