--- a/package.json
+++ b/package.json
@@ -1,86 +1,55 @@
 {
-  "name": "@jiangshengdev/nova-next",
-  "description": "Experimental Vue components",
-  "version": "2.0.0-alpha.29",
+  "name": "vue-project",
+  "version": "0.0.0",
+  "private": true,
   "type": "module",
-  "packageManager": "pnpm@10.22.0",
-  "author": {
-    "name": "jiangshengdev",
-    "email": "jiangshengdev@outlook.com"
-  },
-  "license": "MIT",
   "engines": {
     "node": "^20.19.0 || >=22.12.0"
   },
-  "files": [
-    "dist",
-    "src"
-  ],
-  "main": "./dist/index.js",
-  "module": "./dist/index.esm.js",
   "scripts": {
-    "doc:dev": "vitepress dev docs",
-    "doc:dist": "vitepress build docs",
     "dev": "vite",
+    "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
-    "build": "run-s type-check build:lib build:demo",
-    "build:demo": "vite build",
-    "type-check": "vue-tsc --build",
-    "test": "pnpm test:unit",
-    "test:unit": "vitest run",
-    "test:unit:watch": "vitest",
-    "test:unit:update": "vitest run --update",
+    "test:unit": "vitest",
     "test:e2e": "playwright test",
+    "build-only": "vite build",
+    "type-check": "vue-tsc --build",
     "lint:oxlint": "oxlint . --fix -D correctness --ignore-path .gitignore",
     "lint:eslint": "eslint . --fix --cache",
     "lint": "run-s lint:*",
-    "format": "prettier --write src/",
-    "prepublishOnly": "pnpm lint && pnpm build"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/jiangshengdev/nova-next"
-  },
-  "bugs": {
-    "url": "https://github.com/jiangshengdev/nova-next/issues"
+    "format": "prettier --write src/"
   },
   "dependencies": {
-    "@jiangshengdev/material-design-icons-vue-next": "^1.0.0-alpha.9",
-    "vue": "^3.5.22"
+    "pinia": "^3.0.3",
+    "vue": "^3.5.22",
+    "vue-router": "^4.6.3"
   },
   "devDependencies": {
     "@playwright/test": "^1.56.1",
     "@prettier/plugin-oxc": "^0.0.4",
     "@tsconfig/node22": "^22.0.2",
     "@types/jsdom": "^27.0.0",
-    "@types/node": "^20.0.0",
-    "@vitejs/plugin-vue": "^6.0.2",
-    "@vitejs/plugin-vue-jsx": "^5.1.2",
+    "@types/node": "^22.18.11",
+    "@vitejs/plugin-vue": "^6.0.1",
+    "@vitejs/plugin-vue-jsx": "^5.1.1",
+    "@vitest/eslint-plugin": "^1.3.23",
     "@vue/eslint-config-prettier": "^10.2.0",
     "@vue/eslint-config-typescript": "^14.6.0",
-    "@vue/tsconfig": "^0.8.1",
-    "@vue/compiler-sfc": "^3.5.4",
     "@vue/test-utils": "^2.4.6",
-    "@vitest/coverage-v8": "^3.2.4",
-    "@vitest/eslint-plugin": "^1.3.23",
-    "eslint": "^9.39.1",
+    "@vue/tsconfig": "^0.8.1",
+    "eslint": "^9.37.0",
     "eslint-plugin-oxlint": "~1.23.0",
     "eslint-plugin-playwright": "^2.2.2",
-    "eslint-config-prettier": "^10.0.0",
-    "eslint-plugin-vue": "^10.0.0",
-    "globby": "^14.0.0",
+    "eslint-plugin-vue": "~10.5.0",
     "jiti": "^2.6.1",
     "jsdom": "^27.0.1",
     "npm-run-all2": "^8.0.4",
     "oxlint": "~1.23.0",
-    "prettier": "^3.0.0",
-    "typescript": "^5.7.2",
+    "prettier": "3.6.2",
+    "typescript": "~5.9.0",
     "vite": "npm:rolldown-vite@latest",
-    "vitest": "^3.2.4",
     "vite-plugin-vue-devtools": "^8.0.3",
-    "vitepress": "^1.6.0",
-    "vue-eslint-parser": "^10.0.0",
-    "vue-router": "^4.6.3",
+    "vitest": "^3.2.4",
     "vue-tsc": "^3.1.1"
   }
 }
