--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@playwright/test": "^1.56.1",
     "@prettier/plugin-oxc": "^0.0.4",
+    "@stylistic/eslint-plugin": "^5.6.1",
     "@tsconfig/node22": "^22.0.2",
     "@types/jsdom": "^27.0.0",
     "@types/node": "^22.18.11",
