--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "lint:oxlint": "oxlint . --fix -D correctness --ignore-path .gitignore",
     "lint:eslint": "eslint . --fix --cache",
     "lint": "run-s lint:*",
-    "format": "prettier --write e2e/ issues/ src/ tests/",
+    "format": "prettier --write e2e/ issues/ playground/ src/ tests/",
     "xo": "xo"
   },
   "dependencies": {
